data/derived/fa15/progs/unify/prog3636.ml.out
Characters 94-96:
  List.fold_left f base xs;;
                        ^^
Error: This expression has type int -> int -> int
       but an expression was expected of type 'a list
